--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.5.0",
+    "@headlessui/react": "^2.2.1",
+    "@prisma/client": "^6.6.0",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.6.3",
     "next": "15.2.4",
@@ -25,7 +26,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "prisma": "^6.5.0",
+    "prisma": "^6.6.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
