--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.1",
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.8.2",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
+    "lucide-react": "^0.507.0",
     "next": "15.2.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
@@ -33,7 +34,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "prisma": "^6.7.0",
+    "prisma": "^6.8.2",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
