--- a/package.json
+++ b/package.json
@@ -11,32 +11,40 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.1",
-    "@prisma/client": "^6.7.0",
+    "@prisma/client": "^6.17.1",
     "axios": "^1.9.0",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^3.0.3",
     "date-fns": "^4.1.0",
+    "form-data": "^4.0.5",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.507.0",
-    "next": "15.2.4",
+    "next": "15.2.6",
+    "nodemailer": "^7.0.11",
+    "promptpay-qr": "^0.5.0",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "roboflow": "^0.2.0",
     "swr": "^2.3.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^3.0.0",
     "@types/date-fns": "^2.6.3",
-    "@types/node": "^20",
+    "@types/node": "^20.19.21",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.4",
-    "prisma": "^6.7.0",
+    "eslint-config-next": "15.2.6",
+    "prisma": "^6.17.1",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.8.3"
   }
 }
